Added Monero Address, go spend your money (;-;)

--- a/mobile-stylesheet.css
+++ b/mobile-stylesheet.css
@@ -54,7 +54,7 @@ body {
     padding-bottom: 1.2em;
     padding-left: 0.5em;
     border-radius: 7px;
-    margin-top: 140%;
+    margin-top: 16%;
     margin-left: -2.3%;
 }
 #Foo {
@@ -62,4 +62,11 @@ body {
 }
 #Main {
     margin-left: 30%;
+}
+#address {
+    word-wrap: break-word;	
+    color: #000000;
+}
+#address-qrcode {
+    margin-left: 14%;
 }
